--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 D:UnityProjectsGalGameAssetsfonts filter=lfs diff=lfs merge=lfs -text
 D:UnityProjectsGalGameAssetsResourcesaudiovocal filter=lfs diff=lfs merge=lfs -text
-
+Assets/fonts filter=lfs diff=lfs merge=lfs -text
