--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 D:UnityProjectsGalGameAssetsResourcesaudiovocal filter=lfs diff=lfs merge=lfs -text
 Assets/fonts/** filter=lfs diff=lfs merge=lfs -text
-text=auto
+*.bat text eol=crlf
+*.xlsx binary
