--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 D:UnityProjectsGalGameAssetsResourcesaudiovocal filter=lfs diff=lfs merge=lfs -text
 Assets/fonts/** filter=lfs diff=lfs merge=lfs -text
-*.bat text eol=crlf
-*.xlsx binary
+*text=auto eol=crlf
