--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,15 +50,16 @@
     <Compile Include="Assets\Scripts\TypeWriteEffect.cs" />
     <Compile Include="Assets\Scripts\SingletonMonoBase.cs" />
     <Compile Include="Assets\Scripts\ScreenShotter.cs" />
+    <Compile Include="Assets\Scripts\UI\GalleryManager.cs" />
     <Compile Include="Assets\Scripts\VNManager.cs" />
     <Compile Include="Assets\Scripts\ExcelReader.cs" />
     <Compile Include="Assets\Scripts\Constants.cs" />
     <Compile Include="Assets\Scripts\MenuManager.cs" />
     <Compile Include="Assets\Scripts\HistoryManager.cs" />
     <Compile Include="Assets\Scripts\SettingManager.cs" />
-    <Compile Include="Assets\Scripts\SaveLoadManager.cs" />
     <Compile Include="Assets\Scripts\CSVReader\CSVReader.cs" />
     <Compile Include="Assets\Scripts\test.cs" />
+    <Compile Include="Assets\Scripts\UI\SaveLoadManager.cs" />
     <Compile Include="Assets\Scripts\CharacterImgController.cs" />
   </ItemGroup>
   <ItemGroup>
