--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,10 +53,12 @@
     <Compile Include="Assets\Scripts\UI\GalleryManager.cs" />
     <Compile Include="Assets\Scripts\VNManager.cs" />
     <Compile Include="Assets\Scripts\ExcelReader.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Constants.cs" />
     <Compile Include="Assets\Scripts\MenuManager.cs" />
     <Compile Include="Assets\Scripts\HistoryManager.cs" />
     <Compile Include="Assets\Scripts\SettingManager.cs" />
+    <Compile Include="Assets\Scripts\InputManager.cs" />
     <Compile Include="Assets\Scripts\CSVReader\CSVReader.cs" />
     <Compile Include="Assets\Scripts\test.cs" />
     <Compile Include="Assets\Scripts\UI\SaveLoadManager.cs" />
