--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\TypeWriteEffect.cs" />
+    <Compile Include="Assets\Scripts\Localized\LocalizedText.cs" />
     <Compile Include="Assets\Scripts\SingletonMonoBase.cs" />
     <Compile Include="Assets\Scripts\ScreenShotter.cs" />
     <Compile Include="Assets\Scripts\UI\GalleryManager.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Assets\Scripts\MenuManager.cs" />
     <Compile Include="Assets\Scripts\HistoryManager.cs" />
     <Compile Include="Assets\Scripts\SettingManager.cs" />
+    <Compile Include="Assets\Scripts\Localized\LocalizationManager.cs" />
     <Compile Include="Assets\Scripts\InputManager.cs" />
     <Compile Include="Assets\Scripts\CSVReader\CSVReader.cs" />
     <Compile Include="Assets\Scripts\test.cs" />
