--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 D:UnityProjectsGalGameAssetsResourcesaudiovocal filter=lfs diff=lfs merge=lfs -text
 Assets/fonts/** filter=lfs diff=lfs merge=lfs -text
-*text=auto eol=crlf
+* text eol=crlf
