--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,7 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\TypeWriteEffect.cs" />
+    <Compile Include="Assets\Scripts\Character\CharacterDisplay.cs" />
     <Compile Include="Assets\Scripts\Localized\LocalizedText.cs" />
+    <Compile Include="Assets\Scripts\Character\CharacterData.cs" />
     <Compile Include="Assets\Scripts\SingletonMonoBase.cs" />
     <Compile Include="Assets\Scripts\ScreenShotter.cs" />
     <Compile Include="Assets\Scripts\ChoiceManager.cs" />
@@ -56,6 +58,7 @@
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\UI\GalleryManager.cs" />
     <Compile Include="Assets\Scripts\VNManager.cs" />
+    <Compile Include="Assets\Scripts\Character\CharacterManager.cs" />
     <Compile Include="Assets\Scripts\ExcelReader.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Constants.cs" />
