--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,14 +52,17 @@
     <Compile Include="Assets\Scripts\Localized\LocalizedText.cs" />
     <Compile Include="Assets\Scripts\Character\CharacterData.cs" />
     <Compile Include="Assets\Scripts\SingletonMonoBase.cs" />
+    <Compile Include="Assets\Scripts\Data\SaveData.cs" />
     <Compile Include="Assets\Scripts\ScreenShotter.cs" />
     <Compile Include="Assets\Scripts\ChoiceManager.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\UI\GalleryManager.cs" />
     <Compile Include="Assets\Scripts\VNManager.cs" />
+    <Compile Include="Assets\Scripts\Data\ExcelData.cs" />
     <Compile Include="Assets\Scripts\Character\CharacterManager.cs" />
     <Compile Include="Assets\Scripts\ExcelReader.cs" />
+    <Compile Include="Assets\Scripts\Character\State\CharacterState.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Constants.cs" />
     <Compile Include="Assets\Scripts\MenuManager.cs" />
@@ -71,6 +74,7 @@
     <Compile Include="Assets\Scripts\CSVReader\CSVReader.cs" />
     <Compile Include="Assets\Scripts\test.cs" />
     <Compile Include="Assets\Scripts\CreditsScroller.cs" />
+    <Compile Include="Assets\Scripts\Character\State\CharacterStateManager.cs" />
     <Compile Include="Assets\Scripts\MiniGameManager.cs" />
     <Compile Include="Assets\Scripts\Controller\FadeInEffect.cs" />
     <Compile Include="Assets\Scripts\SaveSlot.cs" />
